--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server-contextPath=/ejemplo01
+server.contextPath=/ejemplo01
 spring.datasource.url=jdbc:mysql://localhost:3306/ejemplo
 spring.datasource.username=root
 spring.datasource.password=password
